updated text submission

--- a/indext.html
+++ b/indext.html
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <section class="section section-dark">
+  <section class="section section-light">
     <p>
       <span>This is your personal Marchov Chain. A tool that you can use to gernerate ideas for poerty when your are stuck.</span>
     </p>
@@ -39,6 +39,7 @@
       <option value="Your Text">Your Text</option>
       <option value="Toni Morrison">Toni Morrison</option>
       <option value="Maya Angelou">Maya Angelou</option>
+      <option value="rupi kaur">rupi kaur</option>
     </select>
     <!-- the textbox only appears if the user with diabaled proprty  -->
     <!-- The submit button stores the text in text varible for the markov chain to work: -->
@@ -49,12 +50,14 @@
 
   <div class="image2" id="section2">
     <div class='ptext'>
-      <span class="border trans">Here is new poem:</span>
+      <span class="border trans">New Poem:</span>
     </div>
   </div>  
 
   <section class="section section-dark">
-    <p id="newPoem"></p>
+    <div class='result'>
+      <p id="newPoem"></p>
+    </div>
   </section>
 
   <div class="image4" id="section2">
