--- a/indext.html
+++ b/indext.html
@@ -18,9 +18,11 @@
   </div>
 
   <section class="section section-light">
-    <p>
-      <span>This is your personal Marchov Chain. A tool that you can use to gernerate ideas for poerty when your are stuck.</span>
-    </p>
+    <div class="textBox">
+      <p>
+        <span>This is your personal Marchov Chain. A tool that you can use to gernerate ideas for poerty when you are stuck.</span>
+      </p>
+    </div>
   </section>
 
   <div class="image3" id="section2">
@@ -55,7 +57,7 @@
   </div>  
 
   <section class="section section-dark">
-    <div class='result'>
+    <div class='textBox'>
       <p id="newPoem"></p>
     </div>
   </section>
