updated opener text

--- a/indext.html
+++ b/indext.html
@@ -20,7 +20,7 @@
   <section class="section section-light">
     <div class="textBox">
       <p>
-        <span>This is your personal Marchov Chain. A tool that you can use to gernerate ideas for poerty when you are stuck.</span>
+        <span>This is a tool that you can use to gernerate ideas for poerty when you are stuck.</span>
       </p>
     </div>
   </section>
