--- a/indext.html
+++ b/indext.html
@@ -27,7 +27,7 @@
 
   <div class="image3" id="section2">
       <div class='ptext'>
-        <span class="border trans">Please Enter poem:</span>
+        <span class="border trans">Enter poem:</span>
       </div>
   </div>  
   
