--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section class="section section-light">
     <div class="textBox">
       <p>
-        <span>This is a tool that you can use to generate ideas for poerty when you are stuck.</span>
+        <span>This is a tool that you can use to generate ideas for poetry when you are stuck.</span>
       </p>
     </div>
   </section>
