added  horizontal-bar

--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Poem Generator</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
   <link rel='stylesheet' type='text/css' href="style.css">
+  <title>Poem Generator</title>
 </head>
 <body>
   <iframe src="" allow="autoplay" id="music" ></iframe>
+  <div class="horizontal-icon-bar">
+    <a class="horz-active" href="https://sjoseph11236.github.io/samPoemGenerator/index.html"><i class="fa fa-home"></i></a>
+    <a href="https://www.facebook.com/sammy.sasenarine"><i class="fa fa-facebook-square"></i></a>
+    <a href="https://www.instagram.com/samiam_gy/?hl=en"><i class="fa fa-instagram"></i></a>
+    <a href="#"><i class="fa fa-search"></i></a>
+    <a href="#"><i class="fa fa-envelope"></i></a>
+
+  </div>
+
   <div class="mainImageBG">
     <div class="ptext">
       <span class="border">
