--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
       <div class='ptext'>
       </div>
   </div>  
-
   <script src="./main.js"></script>
+  <script src="./fetch.js"></script>
 </body>
 </html>
