chore: design jornl page layout

--- a/public/journal.html
+++ b/public/journal.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="journal.css">
   <title>Journal - Sam's Protfolio</title>
 </head>
 <body>
@@ -13,10 +15,24 @@
 
   <div id="journals">
     <div class="container">
-      <title>Entry #1</title>
-      <p></p>
+      <h2>Entry #1</h2>
+      <p>April 15th, 2020</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni odit pariatur porro perspiciatis cum dolore suscipit at, voluptas nemo atque possimus molestiae distinctio, consequuntur totam. Similique recusandae tenetur eveniet facilis?</p>
+    </div>
+
+    <div class="container">
+      <h2>Entry #2</h2>
+      <p>April 14th, 2020</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni odit pariatur porro perspiciatis cum dolore suscipit at, voluptas nemo atque possimus molestiae distinctio, consequuntur totam. Similique recusandae tenetur eveniet facilis?</p>
+    </div>
+
+    <div class="container">
+      <h2>Entry #2</h2>
+      <p>April 13th, 2020</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni odit pariatur porro perspiciatis cum dolore suscipit at, voluptas nemo atque possimus molestiae distinctio, consequuntur totam. Similique recusandae tenetur eveniet facilis?</p>
     </div>
   </div>
+
   <textarea id="userInputText" cols=90 rows=20 placeholder="Write Journal Entries Here"></textarea>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="./fetch.js"></script>
